<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asynt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar">Iniciar</string>
    <string name="cancelar">Cancelar</string>
    <string name="invocar">Invocar</string>
    <string name="toastc">Toast corto</string>
    <string name="toastl">Toast largo</string>
    <string name="toastp">Toast personalizado</string>
    <string name="notifica">Notificacion</string>
    <string name="mi_primer_widget">Mi primer widget</string>

</resources>
